--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Portfolio</title>
+    <title>Rizz | Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -40,16 +40,16 @@
 
     <section id="hero" class="text-center py-5 bg-light">
         <div class="container">
-            <h1 class="display-4">Web Developer Portfolio</h1>
-            <p class="lead">Showcasing web development skills and certificates</p>
-            <a href="#portfolio" class="btn btn-primary btn-lg mt-3">View Portfolio</a>
+            <h1 class="display-4">Hello I'm Rizal</h1>
+            <p class="lead">Welcome to my portfolio website, a beginner Programmer with approximately 1 year of experience in Web Development.</p>
+            <a href="#portfolio" class="btn btn-lg mt-3">View Portfolio</a>
         </div>
     </section>
 
     <section id="about" class="py-5">
         <div class="container">
             <h2 class="mb-4">About Me</h2>
-            <p>Brief introduction highlighting experience and skills.</p>
+            <p style="text-align: justify;">My name is Muhammad Arizal Afriantara, I live in Yogyakarta, and now I am still studying at SMK Negeri 2 Depok Sleman. I'm a beginner web developer, and this website is one of my projects. My expertise is as a front end developer, preferring CSS and Javascript. I have also obtained several certificates that I obtained while studying front end developer. If you want to contact me, don't hesitate, just use the format I have provided below.</p>
         </div>
     </section>
 
@@ -57,10 +57,10 @@
         <div class="container">
             <h2 class="mb-4">Skills</h2>
             <ul class="list-group">
-                <li class="list-group-item">Skill 1</li>
-                <li class="list-group-item">Skill 2</li>
-                <li class="list-group-item">Skill 3</li>
-                <li class="list-group-item">Skill 4</li>
+                <li class="list-group-item">HTML5</li>
+                <li class="list-group-item">CSS</li>
+                <li class="list-group-item">JS</li>
+                <li class="list-group-item">PHP</li>
             </ul>
         </div>
     </section>
@@ -72,8 +72,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Project 1</h3>
-                            <p class="card-text">Project description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
@@ -81,8 +81,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Project 2</h3>
-                            <p class="card-text">Project description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
@@ -90,8 +90,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Project 3</h3>
-                            <p class="card-text">Project description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
@@ -107,8 +107,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Certificate 1</h3>
-                            <p class="card-text">Certificate description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Certificate</a>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Certificate 2</h3>
-                            <p class="card-text">Certificate description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Certificate</a>
                         </div>
                     </div>
@@ -125,8 +125,8 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h3 class="card-title">Certificate 3</h3>
-                            <p class="card-text">Certificate description</p>
+                            <h3 class="card-title">Coming soon</h3>
+                            <p class="card-text">Coming soon</p>
                             <a href="#" class="btn btn-primary">View Certificate</a>
                         </div>
                     </div>
@@ -162,10 +162,10 @@
 
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p class="mb-0">© 2022 Web Developer Portfolio. All rights reserved.</p>
+            <p class="mb-0">© 2024 Rizz. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html
