--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="#">
-                    <img src="https://github.com/Rizz-Web/Rizz/blob/main/20231107_084933.png?raw=true" alt="Logo" class="d-inline-block align-text-top" style="height: 40px;">
+                    <img src="20231107_084933.png" alt="Logo" class="d-inline-block align-middle logo-img">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
